--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/server.js",
     "generate": "drizzle-kit generate",
     "migrate": "tsx src/Drizzle/migrate.ts",
     "seed": "tsx src/Drizzle/seed.ts",
@@ -18,14 +18,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5"
-    
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "express": "^5.1.0",
     "pg": "^8.16.3",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
