--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.2",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
