--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.2",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5"
@@ -30,11 +31,13 @@
     "@neondatabase/serverless": "^1.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "tsx": "^4.20.6",
