--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,42 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES2022",
+//     "module": "NodeNext",
+//     "rootDir": "./src",
+//     // "moduleResolution": "node10",
+//     "moduleResolution": "nodenext",
+//     "outDir": "./dist",
+//     "esModuleInterop": true,
+//     "forceConsistentCasingInFileNames": true, 
+//     /* Type Checking */
+//     "strict": true,
+//     "skipLibCheck": true 
+//   },
+//   "include": [
+//     "src/**/*"   
+//   ],
+//   "exclude": [
+//     "node_modules",
+//     "**/*.spec.ts"
+//   ],
+// }
 {
   "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "rootDir": "./src",
-    // "moduleResolution": "node10",
-    "moduleResolution": "nodenext",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true, 
-    /* Type Checking */
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true 
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": [
-    "src/**/*"   
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "dist"]
 }
