--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
+    "resend": "^6.2.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
