--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
