--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "resend": "^6.2.0",
+    "socket.io": "^4.8.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
