--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "cron": "^4.3.3",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "resend": "^6.2.0",
